--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="w-100 mx-auto">
       <div class="pt-8 overflow-hidden header">
         <h1 class="float-left">
-          <img class="w-40" src="img/logo4.3-h.svg" alt="" />
+          <img class="w-40" src="img/SSMOLab-RGB.png" alt="" />
         </h1>
         <p class="float-right text-sm tracking-widest font-normal pt-4 pr-0">
-          北京百星电子系统有限公司
+          同源數位智能股份有限公司
         </p>
         <!-- <p class="border-black border-opacity-25 border-b pt-8"></p> -->
       </div>
@@ -24,7 +24,7 @@
         <h1
           class="pt-4 text-4xl font-normal text-center tracking-widest text-blue-600"
         >
-          报&nbsp;价&nbsp;单
+          報&nbsp;價&nbsp;單
         </h1>
       </div>
       <div class="">
@@ -33,53 +33,53 @@
         >
           <table class="">
             <tr class="">
-              <td class="border border-blue-200 px-3 py-1">单据编号</td>
+              <td class="border border-blue-200 px-3 py-1">單據編號</td>
               <td class="border border-blue-200 px-3 text-right py-1">
                 QU45954
               </td>
             </tr>
             <tr>
-              <td class="border border-blue-200 px-3 py-1">报价日期</td>
+              <td class="border border-blue-200 px-3 py-1">報價日期</td>
               <td class="border border-blue-200 px-3 text-right pl-12 py-1">
                 2020/03/09
               </td>
             </tr>
             <tr>
-              <td class="border border-blue-200 px-3 py-1">发票类型</td>
+              <td class="border border-blue-200 px-3 py-1">發票類型</td>
               <td class="border border-blue-200 px-3 text-right py-1">
-                专票/普票
+                專票/普票
               </td>
             </tr>
             <tr>
-              <td class="border border-blue-200 px-3 py-1">币别</td>
-              <td class="border border-blue-200 px-3 py-1 text-right">CNY</td>
+              <td class="border border-blue-200 px-3 py-1">幣别</td>
+              <td class="border border-blue-200 px-3 py-1 text-right">NTD</td>
             </tr>
           </table>
         </div>
         <div class="text-sm pt-6 font-normal text-gray-800">
           <table>
             <tr>
-              <td class="font-medium">客&nbsp;户&nbsp;信&nbsp;息</td>
+              <td class="font-medium">客&nbsp;戶&nbsp;訊&nbsp;息</td>
             </tr>
             <tr>
-              <td class="pt-2">公司名称：</td>
-              <td class="pt-2">复星联合健康保险股份有限公司江门中心支公司</td>
+              <td class="pt-2">公司名稱：</td>
+              <td class="pt-2">富星連合健康保險股份有限公司江門中心支公司</td>
             </tr>
             <tr>
-              <td>联&nbsp;系&nbsp;人：</td>
+              <td>聯&nbsp;絡&nbsp;人：</td>
               <td></td>
             </tr>
             <tr>
-              <td>联系方式：</td>
+              <td>聯絡方式：</td>
               <td>1234567890</td>
             </tr>
             <tr>
-              <td>邮 &nbsp;&nbsp;&nbsp;箱：</td>
+              <td>信 &nbsp;&nbsp;&nbsp;箱：</td>
               <td>12345678@163.com</td>
             </tr>
             <tr>
               <td>公司地址：</td>
-              <td>山西省太原市迎泽大街300号保险大厦1407房间</td>
+              <td>山西省太原市迎則大街300號保險大廈1407房間</td>
             </tr>
           </table>
         </div>
@@ -90,27 +90,27 @@
             <td
               class="px-3 py-2 border-gray-100 text-center border-r bg-gray-200"
             >
-              序号
+              序號
             </td>
             <td
               class="px-6 py-2 border-gray-100 text-center border-r bg-gray-200"
             >
-              产品编号
+              產品編號
             </td>
             <td
               class="px-6 py-2 border-gray-100 text-center border-r bg-gray-200"
             >
-              规格描述
+              規格描述
             </td>
             <td
               class="px-2 py-2 border-gray-100 text-center border-r bg-gray-200"
             >
-              单价
+              單價
             </td>
             <td
               class="px-2 py-2 border-gray-100 text-center border-r bg-gray-200"
             >
-              数量
+              數量
             </td>
             <td
               class="px-2 py-2 border-gray-100 text-center border-r bg-gray-200"
@@ -120,10 +120,10 @@
             <td
               class="px-6 py-2 border-gray-100 text-center border-r bg-blue-300"
             >
-              税率
+              稅率
             </td>
             <td class="px-6 py-2 bg-blue-500 text-center text-green-100">
-              小计
+              小計
             </td>
           </tr>
           <tr
@@ -131,7 +131,7 @@
           >
             <td class="py-2">0001</td>
             <td class="">62878634</td>
-            <td>封皮</td>
+            <td>封面</td>
             <td>0.5</td>
             <td>1000</td>
             <td>0</td>
@@ -155,7 +155,7 @@
           >
             <td class="py-2">0003</td>
             <td class="">62878568</td>
-            <td>内页1</td>
+            <td>內頁1</td>
             <td>0.1</td>
             <td>500</td>
             <td>0</td>
@@ -167,7 +167,7 @@
           >
             <td class="py-2">0004</td>
             <td class="">62878532</td>
-            <td>内页2</td>
+            <td>內頁2</td>
             <td>0.2</td>
             <td>800</td>
             <td>0</td>
@@ -179,7 +179,7 @@
           >
             <td class="py-2">0005</td>
             <td class="">62878578</td>
-            <td>内页3</td>
+            <td>內頁3</td>
             <td>0.2</td>
             <td>1600</td>
             <td>0</td>
@@ -191,7 +191,7 @@
           >
             <td class="py-2">0006</td>
             <td class="">62878734</td>
-            <td>内页4</td>
+            <td>內頁4</td>
             <td>0.2</td>
             <td>1100</td>
             <td>0</td>
@@ -203,7 +203,7 @@
           >
             <td class="py-2">0007</td>
             <td class="">62878387</td>
-            <td>内页5</td>
+            <td>內頁5</td>
             <td>0.6</td>
             <td>1100</td>
             <td>0</td>
@@ -217,8 +217,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td class="border-gray-300 border-b py-2">小计</td>
-            <td class="border-gray-300 border-b">¥ 23748</td>
+            <td class="border-gray-300 border-b py-2">小計</td>
+            <td class="border-gray-300 border-b">$ 23748</td>
           </tr>
           <tr class="px-3 text-left text-black">
             <td></td>
@@ -227,8 +227,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td class="py-2">税金</td>
-            <td class="">¥ 237.48</td>
+            <td class="py-2">稅金</td>
+            <td class="">$ 237.48</td>
           </tr>
           <tr class="border-gray-400 border-b-2">
             <td></td>
@@ -247,45 +247,26 @@
             <td></td>
             <td></td>
             <td></td>
-            <td class="font-medium text-black py-2">总计</td>
-            <td class="font-medium text-red-600">¥ 23103.48</td>
+            <td class="font-medium text-black py-2">總計</td>
+            <td class="font-medium text-red-600">$ 23103.48</td>
           </tr>
         </table>
-        <!-- <div class="grid grid-cols-10 text-gray-800 pt-2">
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-start-1 col-end-11 border-gray-300 border-b mt-8"></div>
-                <div class="col-end-10 text-left text-sm py-3">小计</div>
-                <div class="col-end-11 text-right text-sm py-3">¥ 23748</div>
-                <div class="col-start-9 col-end-11 border-gray-300 border-b"></div>
-                <div class="col-end-10 text-left text-sm py-3">税金</div>
-                <div class="col-end-11 text-right text-sm py-3">0:000</div>
-                <div class="col-start-1 col-end-11 border-2 border-gray-400 border-b"></div>
-                <div class="col-end-10 text-left text-sm py-3 font-medium text-black">总计</div>
-                <div class="col-end-11 text-right text-sm py-3 font-medium text-red-600">¥ 23748</div>
-            </div> -->
       </div>
 
-      <!-- <div class="blank hidden h-12"></div> -->
       <div class="text-sm text-gray-700 overflow-hidden pt-6 pb-4">
         <div class="float-left overflow-hidden w-5/12 grid grid-cols-12">
           <div class="col-start-1 col-end-4 pt-1 font-medium">其他说明</div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
-            &nbsp;&nbsp;&nbsp;报价有效期：60天
+            &nbsp;&nbsp;&nbsp;報價有效期：60天
           </div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
-            &nbsp;&nbsp;&nbsp;物流：快递 / 邮政
+            &nbsp;&nbsp;&nbsp;物流：快遞 / 郵政
           </div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
-            &nbsp;&nbsp;&nbsp;运费说明：
+            &nbsp;&nbsp;&nbsp;運費說明：
           </div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
@@ -297,11 +278,11 @@
           </div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
-            &nbsp;&nbsp;&nbsp;交货方式：分批 / 整批
+            &nbsp;&nbsp;&nbsp;交貨方式：分批 / 整批
           </div>
           <div class="flex items-baseline col-start-1 col-end-13 pt-2">
             <span class="bg-blue-500 rounded-full w-2 h-2 pr-2"></span>
-            &nbsp;&nbsp;&nbsp;交货期：收到货款后6天内交货
+            &nbsp;&nbsp;&nbsp;交貨期：收到貨款後6天內交貨
           </div>
         </div>
         <div>
@@ -309,61 +290,33 @@
             class="text-gray-700 bg-blue-100 font-normal text-sm w-6/12 float-right rounded-lg overflow-hidden"
           >
             <tr>
-              <td class="pl-6 pt-8 pr-2">联&nbsp;系&nbsp;人：</td>
-              <td class="pt-8">张三</td>
+              <td class="pl-6 pt-8 pr-2">聯&nbsp;絡&nbsp;人：</td>
+              <td class="pt-8">張三</td>
             </tr>
             <tr class="">
-              <td class="pl-6 pt-1 pr-2">联系电话：</td>
+              <td class="pl-6 pt-1 pr-2">聯絡電話：</td>
               <td class="pt-1">1350012345</td>
             </tr>
             <tr class="">
-              <td class="pl-6 pt-1 pr-2">邮&nbsp;&nbsp;&nbsp;&nbsp;箱：</td>
-              <td class="pt-1">12345678@belstar.com.cn</td>
+              <td class="pl-6 pt-1 pr-2">信&nbsp;&nbsp;&nbsp;&nbsp;箱：</td>
+              <td class="pt-1">12345678@ssmolab.com</td>
             </tr>
             <tr class="">
-              <td class="pl-6 pt-1">公司名称：</td>
-              <td class="pt-1">百星电子系统有限公司</td>
+              <td class="pl-6 pt-1">公司名稱：</td>
+              <td class="pt-1">同源數位智能股份有限公司</td>
             </tr>
             <tr class="">
-              <td class="pl-6 pt-1">公司税号：</td>
+              <td class="pl-6 pt-1">公司稅號：</td>
               <td class="pt-1">911101121021724446</td>
             </tr>
             <tr class="">
               <td class="pl-6 pb-8 align-text-top pt-1">公司地址：</td>
-              <td class="pt-1 pr-6 pb-6">
-                北京市通州区光机电一体化产业基地嘉创路10号枢密院D3栋
-              </td>
+              <td class="pt-1 pr-6 pb-6">高雄市前鎮區民權二路6號6號樓之2</td>
             </tr>
           </table>
         </div>
-        <!-- <div class="grid grid-cols-10 bg-blue-100 font-normal text-sm w-7/12 float-right rounded-lg overflow-hidden">
-                <div class="col-start-2 col-end-13 pt-3">联&nbsp;&nbsp;系&nbsp;&nbsp;人：</div>
-                <div class="col-start-2 col-end-4 pt-2">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：</div>
-                <div class="col-start-4 col-end-13 pt-2 pl-1">12345678@belstar.com.cn</div>
-                <div class="col-start-2 col-end-4 pt-2">公司名称：</div>
-                <div class="col-start-4 col-end-13 pt-2 pl-1">百星电子系统有限公司</div>
-                <div class="col-start-2 col-end-4 pt-2">公司税号：</div>
-                <div class="col-start-4 col-end-13 pt-2 pl-1">911101121021724446</div>
-                <div class="col-start-2 col-end-4 pt-2">公司地址：</div>
-                <div class="col-start-4 col-end-10 pt-2 pl-1 pb-4">北京市通州区光机电一体化产业基地嘉创路10号枢密院D3栋</div>
-            </div> -->
       </div>
       <div class="border-gray-500 border-b border-1 pt-6"></div>
-      <!-- <div class="pt-3 overflow-hidden text-gray-800">
-            <div class="text-sm font-normal pl-6 float-left">
-                <p>联&nbsp;&nbsp;系&nbsp;&nbsp;人：</p>
-                <p class="pt-1">联系方式：1234567890</p>
-                <p class="pt-1">邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱：12345678@163.com</p>
-                <p class="pt-1">公司地址：北京市通州区光机电一体化产业</br>基地嘉创路10号枢密院D3栋</p>
-            </div>
-            <div class="pl-12 text-sm font-medium float-right">
-                <p class="pt-3 text-black">联系人签字：</p>
-                <p class="pt-3 text-right pr-4 font-light">（盖章）</p>
-                <p class="pt-4 pr-6 text-black">北京百星电子系统有限公司</p>
-            </div>
-            <p class="border-black border-b border-1 border-opacity-50 w-full float-right pt-6"></p>
-
-        </div> -->
     </div>
   </body>
 </html>
